plugins {
	id 'idea'
	id 'application'
	id 'java'
}

group 'uk.gov.di.ipv'

repositories {
	mavenCentral()
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
}

dependencies {
	implementation "com.sparkjava:spark-core:2.9.3",
			"com.sparkjava:spark-template-mustache:2.7.1",
			"com.nimbusds:oauth2-oidc-sdk:9.20",
			"com.google.code.gson:gson:2.8.9",
			"org.slf4j:slf4j-simple:1.7.32"

	testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
}

run {
	debugOptions {
		enabled = true
		port = 5007
		server = true
		suspend = false
	}
}

application {
	mainClass = 'uk.gov.di.ipv.stub.orc.App'
}
